--- a/style.css
+++ b/style.css
@@ -45,6 +45,44 @@ section{
     backdrop-filter: blur(15px);
 }
 
+
+/* ---- SIGN UP BOX */
+
+
+.signup-box{
+    width: 400px;
+    height: 500px;
+    border: 2px solid white;
+    border-radius: 10px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin-top: 90px;
+    backdrop-filter: blur(15px);
+    background: transparent;
+    color: white;
+    margin: auto;
+ }
+ .signup-box{
+     position: relative;
+     width: 400px;
+     height: 550px;
+     background: transparent;
+     border: 2px solid rgba(255, 255, 255, 5);
+     border-radius: 20px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     backdrop-filter: blur(15px);
+ }
+ 
+ .signup-box h1{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 3rem;
+    color: white;
+    text-align: center;
+}
 h1{
     font-size: 3rem;
     color: white;
@@ -62,7 +100,7 @@ h1{
     top: 50%;
     left: 5px;
     transform: translateY(-50%);
-    font-size: 1em;
+    font-size: 1rem;
     color: #fff;
     pointer-events: none;
     transition: .5s;
@@ -77,20 +115,92 @@ h1{
     background: transparent;
     border: none;
     outline: none;
-    font-size: 1em;
+    font-size: 1rem;
     color: #fff;
     padding: 0 35px 0 5px;
 }
+
+
+/* ---- INPUT-BOX-FIRSTNAME ---- */
+
+
+.input-box-firstname{
+    position: absolute;
+    width: 120px;
+    margin: 10px 0;
+    border-bottom: 2px solid #fff;
+}
+.input-box-firstname label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1rem;
+    color: #fff;
+    pointer-events: none;
+    transition: .5s;
+}
+.input-box-firstname input:focus~label,
+.input-box-firstname input:valid~label{
+    top: -5px;
+}
+.input-box-firstname input{
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1rem;
+    color: #fff;
+    padding: 0 35px 0 5px;
+}
+
+
+/* ---- INPUT-BOX-LASTNAME ---- */
+
+
+.input-box-lastname{
+    position: relative;
+    width: 180px;
+    margin: 30px 50%;
+    border-bottom: 2px solid #fff;
+}
+.input-box-lastname label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1rem;
+    color: #fff;
+    pointer-events: none;
+    transition: .5s;
+}
+.input-box-lastname input:focus~label,
+.input-box-lastname input:valid~label{
+    top: -5px;
+}
+.input-box-lastname input{
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1rem;
+    color: #fff;
+    padding: 0 35px 0 5px;
+}
+
+
 .input-box .icon{
     position: absolute;
     right: 8px;
     color: #fff;
-    font-size: 1.2em;
+    font-size: 1.2rem;
     line-height: 57px;
 }
 .remember-forgot{
     margin: -15px 0 15px;
-    font-size: .9em;
+    font-size: .9rem;
     color: #fff;
     display:flex;
     justify-content: space-between;
@@ -113,12 +223,12 @@ button{
     outline: none;
     border-radius: 40px;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 1.2rem;
     color: #000;
     font-weight: 500;
 }
 .register-link{
-    font-size: .9em;
+    font-size: .9rem;
     color: #fff;
     text-align: center;
     margin: 25px 0 10px;
@@ -132,6 +242,10 @@ button{
     text-decoration: underline;     
 }
 
+
+/* ---- RESPONSIVE ---- */
+
+
 @media (max-width: 600px){
     .login-box{
         margin-top: 0;
@@ -143,4 +257,18 @@ button{
     .input-box{
         width: 290px;
     }
+    .signup-box{
+        margin-top: 0;
+        width: 100%;
+        height: 100%;
+        border: none;
+        border-radius: 0;
+    }
+    .input-box-firstname{
+        width: 90px;
+    }
+    .input-box-lastname{
+        width: 140px;
+    }
+    
 }
